# hebcal

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CLAUDE.md  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  README_DE.md  astro.c  cargo.c  cargo.h  cities.h  city.c  city.h  common.c  common.h  config.h.in  configure  configure.ac  dafyomi.c  danlib.c  format.c  format.h  gnu.c  gnu.go  go.mod  go.sum  greg.c  greg.h  hebcal.1.in  hebcal.c  hebcal.dsp  hebcal.dsw  hebcal.h  (+28 more)
.github/workflows/: codeql-analysis.yml  go.yml
CVSROOT/: loginfo
c/: AUTHORS  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  Manual  Manual.html  NEWS  OLD_NEWS  README  README.mkd  TODO  cities.h  common.c  common.h  config.h.in  configure  configure.ac  dafyomi.c  dafyomi.h  danlib.c  danlib.h  error.c  format.c  gnu.c  greg.c  greg.h  hebcal.1  hebcal.1.in  hebcal.c  hebcal.h  holidays.c  myerror.h  mygetopt.c  mygetopt.h  mymath.h  mystdio.h  mytime.h  po2gperf.pl  (+7 more)
c/doc/: Makefile.am  Makefile.in  hebcal.texi  version.texi
c/po/: ashkenazi.po  ashkenazi_standard.po  de.po  fr.po  hu.po  pl.po
c/tests/: .gitignore  Makefile.am  Makefile.in  hebcal-1  hebcal-10  hebcal-11  hebcal-2  hebcal-3  hebcal-4  hebcal-5  hebcal-7  hebcal-8  hebcal-test1.ok  hebcal-test10.ok  hebcal-test11.ok  hebcal-test4.ok  hebcal-test5.ok  hebcal-test8.ok  sanity-check.c  yahrzeit.txt
doc/: Makefile.am  gpl.texi
etc/: toICS.pl
intl/: ChangeLog  VERSION
java/hebcalJ/: NEWS  README  pom.xml
java/hebcalJ/src/assembly/: project-assembly.xml
java/hebcalJ/src/main/java/avrom/util/: CandleLighting.java  DefaultSunRiseSet.java  Location.java  LocationList.java  SunRiseSet.java  Utilities.java
java/hebcalJ/src/main/java/net/sf/hebcal/: App.java  HebrewDate.java  HebrewDateException.java  HebrewUtil.java  JewishCalendarEvent.java  JewishHolidaysCalendar.java
java/hebcalJ/src/main/resources/net/sf/hebcal/: Calendar_en_IL.properties  Calendar_en_PL.properties  Calendar_iw.properties  Calendar_ru.properties  JewishHolidaysCalendar_en_IL.properties  JewishHolidaysCalendar_en_PL.properties  JewishHolidaysCalendar_iw.properties  JewishHolidaysCalendar_ru.properties  Parshiot_en_IL.properties  Parshiot_en_PL.properties  Parshiot_iw.properties
java/hebcalJ/src/main/resources/net/sf/hebcal_utf8/: Calendar_iw.properties  Calendar_ru.properties  JewishHolidaysCalendar_iw.properties  JewishHolidaysCalendar_ru.properties  Parshiot_iw.properties  Parshiot_ru.properties  README  xcode.bat
java/hebcalJ/src/test/java/net/sf/hebcal/: AppTest.java
javascript/: .npmignore  README.html  README.md  assert.js  b-mitzvah.html  b-mitzvah.js  client-create.sh  client.browser.js  client.js  client.min.js  client.noloc.js  client.noloc.min.js  client.noloc.src.js  common.js  dafyomi.js  greg.js  hdate.js  hebcal.js  package.json  sedra.js  test.html
js/: cities.js  client.browser.js  client.js  client.min.js  common.js  dafyomi.js  examples.html  greg.js  hdate.js  hebcal.js  holidays.js  package.json  sedra.js
m4/: ChangeLog
mayhem/: Dockerfile  Mayhemfile
perl/: Date.pm  Holiday.ph  Holiday.pm  Sedrot.pm  YearData.pm  bench.pl  common.ph  greg.ph  greg.pl  hebcal.pl  holidays.pl  jewish.pl  onefile.pl  rise.pl
po/: ChangeLog  LINGUAS  Makefile.in  Makevars  POTFILES  POTFILES.in  ashkenazi.po  ashkenazi_litvish.po  ashkenazi_poylish.po  ashkenazi_romanian.po  ashkenazi_standard.po  en@translit.po  en_CA.po  es.po  fi.po  fr.po  he.po  hebcal.pot  hu.po  pl.po  ro.po  ru.po
tests/: Makefile.am  Makefile.in  hebcal-1  hebcal-10  hebcal-10.c  hebcal-11  hebcal-2  hebcal-3  hebcal-4  hebcal-6  hebcal-8  hebcal-9  hebcal-test1.ok  hebcal-test10.ok  hebcal-test2.ok  hebcal-test3.ok  hebcal-test4.ok  hebcal-test6.ok  hebcal-test7.ok  hebcal-test8.ok  hebcal-test9.ok  sanity-check.c
