AC_PREREQ([2.69])
AC_INIT([hebcal],[5.0.4],[https://github.com/hebcal/hebcal/issues],[],[https://github.com/hebcal/hebcal])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([main.go])
AC_LANG([Go])
AC_CHECK_TOOL([GOC], [go build])
AC_CHECK_TOOL([CC], [go build])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([c/hebcal.1])
AC_CONFIG_FILES([version.go])
AC_OUTPUT
